--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,5 @@
 .page {
-  width: 1280px;
-  margin: 0 auto;
   background: #2A2C2F;
-  color: #FFF;
-  font-family: 'Inter', sans-serif;
+  color: #FFFFFF;
+  font-family: 'Inter';
 }
