--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,25 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/__wrapper/page__wrapper.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/main/main.css);
+@import url(../blocks/logo/logo.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/places/places.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/container/container.css);
+.border {
+  border: .5px solid red;
+}
+
+.border-green {
+  border: .5px solid lightgreen;
+}
+
+.border-blue {
+  border: .5px solid lightskyblue;
+}
