--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,14 +2,14 @@
   max-width: 1184px;
   min-height: 740px;
   margin: 92px 48px 0;
-  background-image: url(../../images/cover-route-66.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: #2A2C2F url("../../images/cover-route-66.jpg") no-repeat center;
+  /* background: bg-color  bg-image bg-position  bg-size  bg-repeat bg-origin  bg-clip bg-attachment; */
+  /* background-repeat: no-repeat;
+  background-position: center;*/
+  background-size: cover; 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
 .cover__title {
@@ -19,15 +19,17 @@
   line-height: 76px;
   margin: 0 auto;
   max-width: 656px;
+  text-align: center;
 }
 
 .cover__subtitle {
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  color: #FFF; 
-  margin: 32px 0 0;
+  color: #FFFFFF; 
+  margin: 32px auto 0;
   max-width: 320px;
+  text-align: center;
 }
 
 @media screen and (max-width: 1024px) {
