--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,15 +1,19 @@
 .cover {
+  margin: 92px 48px 0;
+  background: url("../../images/cover-route-66.jpg") no-repeat center / cover;
+}
+
+.cover__overlay {
   max-width: 1184px;
   min-height: 740px;
-  margin: 92px 48px 0;
-  background: #2A2C2F url("../../images/cover-route-66.jpg") no-repeat center;
-  /* background: bg-color  bg-image bg-position  bg-size  bg-repeat bg-origin  bg-clip bg-attachment; */
-  /* background-repeat: no-repeat;
-  background-position: center;*/
-  background-size: cover; 
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(42, 44, 47, .3);
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .cover__title {
