--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -18,16 +18,20 @@
 
 .footer__link {
   text-decoration: none;
-  color: #FFF;
+  color: #FFFFFF;
   margin-right: 18px;
   font-weight: normal;
   font-size: 16px;
-  line-height: 18px;
+  line-height: 1.12;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 .footer__author {
   margin: 0;
   font-weight: normal;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
 }
