media query updates

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,10 +5,18 @@
 }
 
 .header__nav-bar {
-  max-height: 44px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header__logo {
+  max-width: 190px;
+}
+
+.header__logo-img {
+  width: 100%;
+  height: 100%;
 }
 
 .header__list {
@@ -33,12 +41,34 @@
   text-align: right;
 }
 
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
 .header__list-item_active {
   border-bottom: 2px solid #FFFFFF;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-    margin: 34px 48px 58px;
+    margin: 0 48px 50px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: 0 24px 50px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .header {
+    margin: 0 16px 50px;
+    padding-top: 20px;
+  }
+
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.11;
   }
 }
