--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,14 +1,11 @@
 .cover {
   margin: 92px 48px 0;
+  max-width: 1184px;
   background: url("../../images/cover-route-66.jpg") no-repeat center / cover;
 }
 
 .cover__overlay {
-  max-width: 1184px;
   min-height: 740px;
-  display: none;
-  width: 100%;
-  height: 100%;
   background-color: rgba(42, 44, 47, .3);
   display: flex;
   justify-content: center;
@@ -25,16 +22,16 @@
   color: #FFFDFD;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
+  line-height: 1.06;
   margin: 0 auto;
   max-width: 656px;
   text-align: center;
 }
 
 .cover__subtitle {
-  font-weight: normal;
+  font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.22;
   color: #FFFFFF; 
   margin: 32px auto 0;
   max-width: 320px;
@@ -44,5 +41,50 @@
 @media screen and (max-width: 1024px) {
   .cover {
     margin: 92px 0 0;
+  }
+
+  .cover__overlay {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover {
+    margin: 89px 0 0;
+  }
+
+  .cover__overlay {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .cover {
+    margin: 64px 0 0;
+  }
+
+  .cover__overlay {
+    min-height: 265px;
+  }
+
+  .cover__title {
+    color: #FFFFFF;
+    font-size: 32px;
+    line-height: 1.09;
+    margin: 0 auto;
+    max-width: 288px;
+  }
+
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.14;
+    margin: 16px auto 0;
+    max-width: 288px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__overlay {
+    min-height: 200px;
   }
 }
