--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -20,7 +20,7 @@
   text-decoration: none;
   color: #FFFFFF;
   margin-right: 18px;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.12;
 }
@@ -31,7 +31,65 @@
 
 .footer__author {
   margin: 0;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.14;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: 928px;
+    margin: 92px 48px 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+    margin: 88px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .footer {
+    max-width: 255px;
+    margin: 64px 20px 24px;
+  }
+
+  .footer__blocks {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  
+  .footer__list {
+    list-style: none;
+    margin-bottom: 48px; 
+    flex-direction: column;
+  }
+
+  .footer__list-item {
+    margin-bottom: 32px;
+  } 
+
+  .footer__list-item:last-child {
+    margin-bottom: 0;
+  } 
+  
+  .footer__link {
+    margin: 0;
+    font-size: 24px;
+    line-height: 1.0;
+  }
+
+  .footer__author {
+    line-height: 1.0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 165px;
+    margin: 64px 16px 24px;
+  }
 }
