--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -52,3 +52,34 @@
     margin-left: 48px;
   }
 }
+
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 720px;
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .intro {
+    max-width: calc(425px - 32px);
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 1.09;
+  }
+
+  .intro__subtitle {
+    line-height: 1.25;
+  }  
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    max-width: 288px;
+  }
+}
