--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -14,7 +14,7 @@
 }
 
 .lead__subtitle {
-  margin: 32px auto 0;
+  margin: 32px auto 64px;
   max-width: 620px;
   font-size: 30px;
   font-weight: 400;
@@ -23,7 +23,7 @@
 
 .lead__image {
   width: 100%;
-  margin: 64px auto 0;
+  margin: 0 auto;
   object-fit: cover;
 }
 
@@ -35,11 +35,62 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
   text-align: left;
-
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
     margin: 0 48px 92px;
+  }
+
+  .lead__subtitle {
+    margin: 32px auto 56px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    margin: 0 0 88px;
+  }
+
+  .lead__image {
+    margin: 0;
+  }
+
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .lead {
+    margin: 0 0 64px;
+  }
+  
+  .lead__title {
+    margin: 0 16px;
+    font-size: 60px;
+    line-height: 1.1;
+  }
+
+  .lead__subtitle {
+    margin: 32px 16px 56px;
+    font-size: 20px;
+    line-height: 1.25;
+  }
+
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    font-size: 40px;
+  }
+
+  .lead__subtitle {
+    margin: 16px 16px 40px;
+    font-size: 16px;
   }
 }
