--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -23,6 +23,10 @@
   margin-bottom: 80px;
 }
 
+.places__item:last-child {
+  margin-bottom: 0;
+}
+
 .places__title {
   font-size: 72px;
   font-weight: 900;
@@ -33,13 +37,12 @@
 
 .places__website {
   max-width: 456px;
-  max-height: 46px;
   margin: 0;
   align-self: flex-end;
 }
 
 .places__url-heading {
-  margin: 0 0 4px;
+  margin: 0 0 12px;
   border: 0;
   color: #AAAAAA;
   font-size: 12px;
@@ -49,7 +52,7 @@
 }
 
 .places__link {
-  margin: 4px 0 0;
+  margin: 0;
   color: #FFFFFF;
   font-size: 18px;
   font-weight: 400;
@@ -74,14 +77,91 @@
 }  
 
 .places__paragraph {
-  margin: 0 0 25px;
+  margin: 0;
+  margin-bottom: 25px;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.63;
-}  
+}
+
+.places__paragraph:last-child {
+  margin-bottom: 0;
+}
 
 @media screen and (max-width: 1024px) {
   .places {
     margin: 0 48px;
+  }
+
+  .places__item {
+    gap: 48px 32px;
+  }
+
+  .places__image {
+    width: 100%;
+  }  
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    margin: 0 24px;
+  }
+
+  .places__item {
+    gap: 48px 28px;
+    margin-bottom: 73px;
+  }
+
+  .places__title {
+    font-size: 42px;
+    line-height: 1.1;
+    width: fit-content;
+  }
+
+  .places__url-heading {
+    line-height: 1.0;
+  }
+
+  .places__paragraph {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .places {
+    margin: 0;
+  }
+
+  .places__item {
+    grid-template-columns: auto;
+    grid-template-rows: repeat(4, auto);
+    gap: 30px 0;
+    margin-bottom: 60px;
+  }
+
+  .places__title {
+    font-size: 32px;
+    line-height: 1.09;
+    margin: 0 16px;
+  }
+
+  .places__url-heading {
+    margin: 0 16px;
+  }
+
+  .places__link {
+    margin: 0 16px;
+  }
+
+  .places__paragraph {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .places__item {
+    width: 100%;
+    margin-bottom: 48px;
   }
 }
