--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,50 +1,15 @@
+@import url(./__title/intro__title.css);
+@import url(./__subtitle/intro__subtitle.css);
+@import url(./__paragraph/intro__paragraph.css);
+@import url(./__list/intro__list.css);
+@import url(./__list-text/intro__list-text.css);
+@import url(./__span-accent/intro__span-accent.css);
+
+
 .intro {
   max-width: 690px;
   margin: 0;
   margin-left: 148px;
-}
-
-.intro__title {
-  font-size: 54px;
-  font-weight: 900;
-  line-height: 1.07;
-  margin: 0;
-}
-
-.intro__subtitle {
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 1.42;
-  max-width: 690px;
-  margin: 40px 0 32px;
-}
-
-.intro__paragraph {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.63;
-  margin: 0 0 33px;
-}
-
-.intro__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.intro__list-text {
-  margin: 0;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 12px;
-  line-height: 1.5;
-}
-
-.intro__span-accent {
-  font-weight: 700;
-  font-style: normal;
-  font-size: 12px;
-  line-height: 1.5;
 }
 
 @media screen and (max-width: 1024px) {
@@ -67,15 +32,6 @@
     margin-left: 16px;
     margin-right: 16px;
   }
-
-  .intro__title {
-    font-size: 32px;
-    line-height: 1.09;
-  }
-
-  .intro__subtitle {
-    line-height: 1.25;
-  }  
 }
 
 @media screen and (max-width: 320px) {
