--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,49 +1,17 @@
+@import url(./__title/lead__title.css);
+@import url(./__subtitle/lead__subtitle.css);
+@import url(./__image/lead__image.css);
+@import url(./__caption/lead__caption.css);
+
 .lead {
   max-width: 984px;
   margin: 0 148px 92px;
   text-align: center;
 }
 
-.lead__title {
-  max-width: 720px;
-  margin: 0 auto;
-  font-size: 96px;
-  font-weight: 900;
-  line-height: 1.04;
-  text-align: center;
-}
-
-.lead__subtitle {
-  margin: 32px auto 64px;
-  max-width: 620px;
-  font-size: 30px;
-  font-weight: 400;
-  line-height: 1.2;
-}
-
-.lead__image {
-  width: 100%;
-  margin: 0 auto;
-  object-fit: cover;
-}
-
-.lead__caption {
-  margin: 8px 0 0;
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 1.4;
-  letter-spacing: 0.15em;
-  text-transform: uppercase;
-  text-align: left;
-}
-
 @media screen and (max-width: 1024px) {
   .lead {
     margin: 0 48px 92px;
-  }
-
-  .lead__subtitle {
-    margin: 32px auto 56px;
   }
 }
 
@@ -51,46 +19,10 @@
   .lead {
     margin: 0 0 88px;
   }
-
-  .lead__image {
-    margin: 0;
-  }
-
-  .lead__caption {
-    margin-left: 24px;
-  }
 }
-
 
 @media screen and (max-width: 425px) {
   .lead {
     margin: 0 0 64px;
-  }
-  
-  .lead__title {
-    margin: 0 16px;
-    font-size: 60px;
-    line-height: 1.1;
-  }
-
-  .lead__subtitle {
-    margin: 32px 16px 56px;
-    font-size: 20px;
-    line-height: 1.25;
-  }
-
-  .lead__caption {
-    margin-left: 16px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .lead__title {
-    font-size: 40px;
-  }
-
-  .lead__subtitle {
-    margin: 16px 16px 40px;
-    font-size: 16px;
   }
 }
