--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,167 +1,32 @@
+@import url(./__list/places__list.css);
+@import url(./__item/places__item.css);
+@import url(./__title/places__title.css);
+@import url(./__website/places__website.css);
+@import url(./__url-heading/places__url-heading.css);
+@import url(./__link/places__link.css);
+@import url(./__image/places__image.css);
+@import url(./__paragraph-block/places__paragraph-block.css);
+@import url(./__paragraph-text/places__paragraph-text.css);
+
 .places {
   max-width: 984px;
   margin: 0 148px;
-}
-
-.places__list {
-  list-style: none;
-  text-align: left;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: space-between;
-  align-content: space-between;
-  flex-direction: column;
-}
-
-.places__item {
-  max-width: 984px;
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-template-rows: repeat(2, auto);
-  gap: 48px 40px;
-  margin-bottom: 80px;
-}
-
-.places__item:last-child {
-  margin-bottom: 0;
-}
-
-.places__title {
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 1.06;
-  margin: 0;
-  max-width: 460px;
-}
-
-.places__website {
-  max-width: 456px;
-  margin: 0;
-  align-self: flex-end;
-}
-
-.places__url-heading {
-  margin: 0 0 12px;
-  border: 0;
-  color: #AAAAAA;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 1.7;
-  letter-spacing: 0.2em;
-}
-
-.places__link {
-  margin: 0;
-  color: #FFFFFF;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.22;
-  vertical-align: top;
-  text-decoration: none;
-  border-bottom: 1px solid #FFFFFF;
-}
-
-.places__link:hover {
-  opacity: 0.8;
-}
-
-.places__image {
-  max-width: 460px;
-  object-fit: cover;
-}  
-
-.places__paragraph-block {
-  max-width: 484px;
-  margin: 0;
-}  
-
-.places__paragraph {
-  margin: 0;
-  margin-bottom: 25px;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 1.63;
-}
-
-.places__paragraph:last-child {
-  margin-bottom: 0;
 }
 
 @media screen and (max-width: 1024px) {
   .places {
     margin: 0 48px;
   }
-
-  .places__item {
-    gap: 48px 32px;
-  }
-
-  .places__image {
-    width: 100%;
-  }  
 }
 
 @media screen and (max-width: 768px) {
   .places {
     margin: 0 24px;
   }
-
-  .places__item {
-    gap: 48px 28px;
-    margin-bottom: 73px;
-  }
-
-  .places__title {
-    font-size: 42px;
-    line-height: 1.1;
-    width: fit-content;
-  }
-
-  .places__url-heading {
-    line-height: 1.0;
-  }
-
-  .places__paragraph {
-    font-size: 16px;
-  }
 }
 
 @media screen and (max-width: 425px) {
   .places {
     margin: 0;
-  }
-
-  .places__item {
-    grid-template-columns: auto;
-    grid-template-rows: repeat(4, auto);
-    gap: 30px 0;
-    margin-bottom: 60px;
-  }
-
-  .places__title {
-    font-size: 32px;
-    line-height: 1.09;
-    margin: 0 16px;
-  }
-
-  .places__url-heading {
-    margin: 0 16px;
-  }
-
-  .places__link {
-    margin: 0 16px;
-  }
-
-  .places__paragraph {
-    margin-left: 16px;
-    margin-right: 16px;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .places__item {
-    width: 100%;
-    margin-bottom: 48px;
   }
 }
