--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   background: #2A2C2F;
   color: #FFFFFF;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   margin: 0 auto;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
