--- a/blocks/places/__image/places__image.css
+++ b/blocks/places/__image/places__image.css
@@ -1,11 +1,3 @@
 .places__image {
-  max-width: 460px;
-  object-fit: cover;
+  width: 100%
 }  
-
-
-@media screen and (max-width: 1024px) {
-  .places__image {
-    width: 100%;
-  }  
-}
