--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,8 +1,6 @@
 .places__item {
-  max-width: 984px;
   display: grid;
-  grid-template-columns: repeat(2, auto);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(2, 1fr);
   gap: 48px 40px;
   margin-bottom: 80px;
 }
@@ -25,10 +23,14 @@
   }
 }
 
+@media screen and (max-width: 650px) {
+  .places__item {
+    grid-template-columns: 1fr;
+  }
+}
+
 @media screen and (max-width: 425px) {
   .places__item {
-    grid-template-columns: auto;
-    grid-template-rows: repeat(4, auto);
     gap: 30px 0;
     margin-bottom: 60px;
   }
@@ -36,7 +38,6 @@
 
 @media screen and (max-width: 320px) {
   .places__item {
-    width: 100%;
     margin-bottom: 48px;
   }
 }
