--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -3,14 +3,24 @@
   font-weight: 900;
   line-height: 1.06;
   margin: 0;
-  max-width: 460px;
+}
+
+@media screen and (max-width: 1146px) {
+  .places__title {
+    font-size: 62px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .places__title {
+    font-size: 38px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .places__title {
     font-size: 42px;
     line-height: 1.1;
-    width: fit-content;
   }
 }
 
