--- a/blocks/places/__link/places__link.css
+++ b/blocks/places/__link/places__link.css
@@ -7,6 +7,7 @@
   vertical-align: top;
   text-decoration: none;
   border-bottom: 1px solid #FFFFFF;
+  transition: opacity .4s ease-out .2s;
 }
 
 .places__link:hover {
